# trnbl

./: .gitignore  README.md  demo.ipynb  makefile  pyproject.toml  readme.md
.github/: dev-requirements.txt  lint-requirements.txt
.github/workflows/: checks.yml
docs/: index.html
docs/coverage/: coverage.txt
docs/iris-demo/: index.html  runs.jsonl
docs/iris-demo/runs/hf4264-240723_0202-radado/: artifacts.jsonl  log.jsonl  meta.json  meta.yml  metrics.jsonl  model.final.pt
docs/iris-demo/runs/hf4264-240723_0202-radado/checkpoints/: model.checkpoint-0.pt
docs/iris-demo/runs/hf4264-240723_0205-viwexe/: artifacts.jsonl  log.jsonl  meta.json  meta.yml  metrics.jsonl  model.final.pt
docs/iris-demo/runs/hf4264-240723_0205-viwexe/checkpoints/: model.checkpoint-0.pt
docs/iris-demo/runs/hf4264-240723_0207-cacixa/: artifacts.jsonl  config.yml  log.jsonl  meta.json  meta.yml  metrics.jsonl  model.final.pt
docs/iris-demo/runs/hf4264-240723_0207-cacixa/checkpoints/: model.checkpoint-0.pt  model.checkpoint-1.pt
docs/iris-demo/runs/hf4264-240723_0208-devofu/: artifacts.jsonl  log.jsonl  meta.json  meta.yml  metrics.jsonl  model.final.pt
docs/iris-demo/runs/hf4264-240723_0208-devofu/checkpoints/: model.checkpoint-0.pt  model.checkpoint-1.pt
docs/iris-demo/runs/hf4264-240723_0210-tefumu/: artifacts.jsonl  config.json  log.jsonl  meta.json  meta.yml  metrics.jsonl  model.final.pt
docs/iris-demo/runs/hf4264-240723_0210-tefumu/checkpoints/: model.checkpoint-0.pt  model.checkpoint-1.pt
docs/iris-demo/runs/hf4264-240723_1423-yujora/: artifacts.jsonl  log.jsonl  meta.json  meta.yml  metrics.jsonl  model.final.pt
docs/iris-demo/runs/hf4264-240723_1423-yujora/checkpoints/: model.checkpoint-0.pt  model.checkpoint-1.pt
docs/iris-demo/runs/hf4264-240723_1424-fenuta/: artifacts.jsonl  log.jsonl  meta.json  meta.yml  metrics.jsonl  model.final.pt
docs/iris-demo/runs/hf4264-240723_1424-fenuta/checkpoints/: model.checkpoint-0.pt  model.checkpoint-1.pt
notebooks/: demo.ipynb  demo_minimal.ipynb
tests/unit/: test_tm_integration.py  test_training_interval.py  test_training_manager.py
tests/unit/loggers/: test_local_logger.py  test_tensorboard_logger.py
trnbl/: __init__.py  training_interval.py  training_manager.py
trnbl/frontend/: dashboard.js  html_frontend.py  start_server.py  style.css
trnbl/loggers/: base.py  local.py  multi.py  tensorboard.py  wandb.py
trnbl/loggers/local/: __init__.py  build_dist.py  html_frontend.py  locallogger.py  start_server.py
trnbl/loggers/local/frontend_src/: dashboard.js  index_src.html  style.css
