[tool.poetry]
name = "trnbl"
version = "0.0.1"
description = ""
authors = ["mivanit <mivanits@umich.edu>"]
readme = "README.md"
packages = [{include = "trnbl"}]

[tool.poetry.dependencies]
python = "^3.11"
muutils = "^0.5.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
# coverage
pytest-cov = "^4.1.0"
coverage-badge = "^1.1.0"
# python formatting / linting
ruff = "^0.4.8"
mypy = "^1.0.1"
pycln = "^2.1.3"
isort = "^5.12.0"
# frontend minification
rjsmin = "^1.2.2"
rcssmin = "^1.1.2"
# type hints
torch = "^2.0.0"

[tool.poetry.extras]
wandb = ["wandb"]
tensorboard = ["tensorboard"]
monitoring = ["gputil", "psutil"]

[tool.poetry.group.wandb]
optional = true
dependencies = { wandb = "^0.16.6" }

[tool.poetry.group.tensorboard]
optional = true
dependencies = { tensorboard = "^2.17.0" }

[tool.poetry.group.monitoring]
optional = true
dependencies = { gputil = "^1.4.0", psutil = "^5.9.8" }

# ruff config
[tool.ruff]
exclude = ["trnbl/_old/**"]

[tool.ruff.format]
indent-style = "tab"
skip-magic-trailing-comma = false


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
