[tool.poetry]
name = "trnbl"
version = "0.0.2"
description = "training manager and loggers"
license = "GPL-3.0-only"
homepage = "https://github.com/mivanit/trnbl"
repository = "https://github.com/mivanit/trnbl"
authors = ["mivanit <mivanits@umich.edu>"]
readme = "README.md"
packages = [{include = "trnbl"}]
classifiers=[
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.10"
muutils = "^0.6.7"
tqdm = "^4.66.4"
pyyaml = "^6.0.1 "
# optional
wandb = {version = "^0.16.6", optional = true}
tensorboard = {version = "^2.17.0", optional = true}
numpy = {version = "^1.12.0", optional = true} # tensorboard breaks with numpy >=2.0.0
gputil = {version = "^1.4.0", optional = true}
psutil = {version = "^5.9.8", optional = true}

[tool.poetry.group.lint.dependencies]
# python formatting / linting
ruff = "^0.4.8"
pycln = "^2.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
mypy = "^1.0.1"
# coverage
pytest-cov = "^4.1.0"
coverage-badge = "^1.1.0"
# frontend minification
rjsmin = "^1.2.2"
rcssmin = "^1.1.2"
minify-html = "^0.15.0"
beautifulsoup4 = "^4.12.3"
# type hints
torch = "^2.0.0"
# running demo
pandas = "^2.2.2"
ipykernel = "^6.29.5"

[tool.poetry.extras]
wandb = ["wandb"]
tensorboard = ["tensorboard", "numpy"]
monitoring = ["gputil", "psutil"]

# pytest cfg
[tool.pytest.ini_options]
# Ignore DeprecationWarnings
filterwarnings = [
	# <frozen importlib._bootstrap>:488: DeprecationWarning: Type google._upb._message.MessageMapContainer uses PyType_Spec with a metaclass that has custom tp_new. This is deprecated and will no longer be allowed in Python 3.14.
    "ignore::DeprecationWarning:google._upb._message:", 
    "ignore::DeprecationWarning:importlib._bootstrap:",
    "ignore::DeprecationWarning:GPUtil.GPUtil:",
]

# ruff config
[tool.ruff]
exclude = ["trnbl/_old/**"]

[tool.ruff.format]
indent-style = "tab"
skip-magic-trailing-comma = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
